# nanogptx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  download.py  model.py  pixi.toml  pyproject.toml  sample.py  tests.py  utils.py
.github/workflows/: ci.yml  pixi-setup.yml
assets/: names.json
configs/: default.toml  eval-gpt2.toml  train-fineweb-10b-on-1-gpu.toml  train-fineweb-10b-on-8-gpus.toml  train-fineweb-10b.toml  train-shakespeare-char.toml  train-shakespeare.toml
data/: README.md
src/: __init__.py  data.py  download.py  dump-config.py  eval.py  evaluate.py  model.py  prepare.py  sample.py  show-meta.py  tests.py  train.py  utils.py  utils_jax.py
tests/: tests.py
