[project]
name = "from-scratch-in-jax-nano-gpt"
version = "0.1.0"
description = "A pure JAX implementation of nano GPT-2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.30",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "safetensors>=0.4.5",
    "tiktoken>=0.8.0",
    "tomli-w>=1.1.0",
]
